# oop4

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  factory.h  figure.h  point.h  rectangle.h  square.h  triangle.h
src/: array.cpp  point.cpp  rectangle.cpp  square.cpp  triangle.cpp
tests/: CMakeLists.txt  test_all.cpp
